// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clock renders the clock 1`] = `
<div>
  <time
    class="mx_Clock"
    datetime="PT20S"
  >
    00:20
  </time>
</div>
`;

exports[`Clock renders the clock with a lot of seconds 1`] = `
<div>
  <time
    class="mx_Clock"
    datetime="PT27777777777H46M39S"
  >
    27777777777:46:39
  </time>
</div>
`;
